force-app/main/default/objects/Course_Assignment__c/fields/Capacity_PSA_Phone__c.field-meta.xml
<CustomField>
    <fullName>Capacity_PSA_Phone__c</fullName>
    <formula>Course__r.Capacity_PSA_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity PSA Phone</label>
    <type>Text</type>
</CustomField>