force-app/main/default/objects/Course_Assignment__c/fields/Count_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Sessions__c</fullName>
    <label>Count of Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>