force-app/main/default/objects/Course_Assignment__c/fields/Number_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sessions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of sessions associated to this Course Assignment record. Populated by Declarative Rollup Summary managed package.</description>
    <label>Number of Sessions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>