force-app/main/default/objects/Course_Assignment__c/fields/Practitioner_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Contact_Id__c</fullName>
    <formula>CASESAFEID(Practitioner__r.ContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practitioner_Contact_Id</label>
    <type>Text</type>
</CustomField>