force-app/main/default/objects/Course_Assignment__c/fields/Practitioner_Name__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Name__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practitioner Name</label>
    <type>Text</type>
</CustomField>