force-app/main/default/objects/Course_Assignment__c/fields/PractitionerId__c.field-meta.xml
<CustomField>
    <fullName>PractitionerId__c</fullName>
    <formula>CASESAFEID(Practitioner__r.ContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PractitionerId</label>
    <type>Text</type>
</CustomField>