force-app/main/default/objects/Course_Assignment__c/fields/PSA_Area__c.field-meta.xml
<CustomField>
    <fullName>PSA_Area__c</fullName>
    <formula>TEXT(Course__r.Branch__r.PSA_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSA Area</label>
    <type>Text</type>
</CustomField>