force-app/main/default/objects/Course_Assignment__c/fields/Rate_One__c.field-meta.xml
<CustomField>
    <fullName>Rate_One__c</fullName>
    <label>Rate One</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>