force-app/main/default/objects/Course_Assignment__c/fields/Rate_Two__c.field-meta.xml
<CustomField>
    <fullName>Rate_Two__c</fullName>
    <label>Rate Two</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>