force-app/main/default/objects/Course_Assignment__c/fields/Rate_Two_Hours__c.field-meta.xml
<CustomField>
    <fullName>Rate_Two_Hours__c</fullName>
    <label>Rate Two Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>