force-app/main/default/objects/Course_Assignment__c/fields/Total_Fees_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees_Payable__c</fullName>
    <label>Total Fees Payable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>