force-app/main/default/objects/Course_Assignment__c/validationRules/CA_Can_Only_Be_Created_For_Final_Courses.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Can_Only_Be_Created_For_Final_Courses</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), NOT( ISPICKVAL( Course__r.Status__c , &#39;Final&#39;) ))</errorConditionFormula>
    <errorMessage>Course Assignment records can only be created when the Course is in a status of &#39;Final&#39;.</errorMessage>
</ValidationRule>