force-app/main/default/objects/Course_Assignment__c/validationRules/Course_can_not_be_changed_on_CA_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_can_not_be_changed_on_CA_record</fullName>
    <active>true</active>
    <description>It is not possible to change the Course on a Course Assignment record.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Course__c)</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>It is not possible to change the Course on a Course Assignment record. Please create a new Course Assignment record under the correct Course.</errorMessage>
</ValidationRule>