force-app/main/default/objects/Course_Assignment__c/listViews/Approved_Course_Not_Started.listView-meta.xml
<ListView>
    <fullName>Approved_Course_Not_Started</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>PSA_Area__c</columns>
    <columns>Course_Start_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Course_Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Approved - Course Not Started</label>
</ListView>