force-app/main/default/objects/Course_Assignment__c/listViews/Course_Assignments_Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>Course_Assignments_Awaiting_Approval</fullName>
    <columns>NAME</columns>
    <columns>Course_Start_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Course Assignments Awaiting Approval</label>
</ListView>